--- a/tutorials/breapoints/index.html
+++ b/tutorials/breapoints/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Google Chrome Developer Tools Tutorial - The Chromium Projects</title>
+<title>Google Chrome Developer Tools Breakpoints Tutorial</title>
 </head>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript">function f() {}</script>
@@ -24,230 +24,257 @@ body {
   margin: 5px;
   text-align: center;
 }
+
+img.ui {
+  border: 0px;
+  position: relative;
+  top: 3px;
+}
+
+.source-code {
+  font-family: monospace;
+}
 </style>
 
-<div id="content">
+<div id="content"><a href="http://www.chromium.org/devtools">Google
+Chrome Developer Tools</a> &gt;
+<h1>Google Chrome Developer Tools Breakpoints Tutorial</h1>
+<p>This tutorial covers debugging JavaScript using regular breakpoints set on JavaScript code
+and breakpoints targeted at UI and network aspects of an application.
 
-<h1>Intro</h1>
-<div>The Scripts panel allows you to see all the scripts that are part of
-the inspected page. History buttons, a drop-down list, and standard controls to
-pause, resume, and step through code are provided below the panel selection
-icons. A button to force a pause at exceptions is located at the bottom of the
-window.</div>
-<br><img src=images/scriptsPanel.png></img><br><br>
-<div>You can set the following types of breakpoints on Scripts panel:
+<h3><b>Table of Contents</b></h3>
 <ul>
   <li><a href="#regular">Regular JavaScript Breakpoints</a></li>
   <li><a href="#dom">Breakpoints on DOM Mutation Events</a></li>
   <li><a href="#xhr">Breakpoints on XHR</a></li>
   <li><a href="#eventListener">Breakpoints on JavaScript Event
   Listeners</a></li>
+  <li><a href="#moreInformation">More Information</a></li>  
 </ul>
-</div>
+</p>
+
+<h3><b>Before You Start</b></h3>
+<p>If you are a Web Developer and want to get the latest version of
+Developer Tools, you should use the Google Chrome release from the <a
+  href="http://dev.chromium.org/getting-involved/dev-channel">Developer
+Channel</a>. You'll need Google Chrome 9.0.587.0 or later to work through all
+examples in this tutorial.</p>
+
+<h3><b>How to Access the Developer Tools</b></h3>
+<p>To access the Developer Tools select the <b>Wrench menu</b> <img
+  class="ui" src="images/wrench.png" /> at the top-right of your browser
+window, then select <b>Tools </b>-&gt; <b>Developer tools</b>, or use the <b>Control-Shift-I</b>
+shortcut.</p>
+
+<h3><b>How to Use Scripts Panel</b></h3>
+<p>To access the <b>Scripts</b> panel select <b>Scripts</b> icon on the
+Developer Tools window.</p>
+<br><img src=images/scriptsPanel.png></img><br><br> The 
+<b>Scripts</b> panel allows you to see all the scripts that are part of the
+inspected page. History buttons, a drop-down list, and standard controls to
+pause, resume, and step through code are provided below the panel selection
+icons. A button to force a pause at exceptions is located at the bottom of the
+window.
 
 <h1><a name="regular">Regular JavaScript Breakpoints</a></h1>
 <ol>
-  <li>Open Scripts Panel and select "script.js" from scripts drop-down</li>
-  <li>Set breakpoint on line 19</li>
+  <li>Open the Developer Tools by hitting the <b>Control-Shift-I</b>
+  shortcut</li>
+  <li>Open <b>Scripts</b> panel and select "script.js" from scripts
+  drop-down</li>
+  <li>Set breakpoint on line 19 by clicking the line gutter (you can use
+  the <b>Control-G</b> shortcut to reveal a line in a large file)</li>
   <li>Move your mouse over this page</li>
   <li>You should stop on the breakpoint</li>
-  <br><img src=images/pauseOnBreakpoint.png></img><br><br>
+  <li>Hover over the source code to inspect local and global variables,
+  function arguments etc.</li>
   <li>Delete the breakpoint by clicking the blue tag breakpoint indicator</li>
-  <li>Press play or hit F8 to resume</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
+  <br><img src=images/pauseOnBreakpoint.png></img><br><br>
 </ol>
-<div>All the breakpoints you have set appear under Breakpoints in the
+<p>All the breakpoints you have set appear under <b>Breakpoints</b> in the
 right-hand sidebar. Clicking on the entry jumps to the highlighted line in the
 source file. Once you have a breakpoint set, right click on the blue tag
 breakpoint indicator to set a conditional statement for that breakpoint. Type an
-expression and the breakpoint will only pause only if the condition is true.</div>
+expression and the breakpoint will only pause only if the condition is true.</p>
 
-<h2>Breakpoints in Dynamic JavaScript</h2>
+<h3><b>Breakpoints in Dynamic JavaScript</b></h3>
 <ol>
   <li>
   <button id="loadDynamicScriptButton" onclick="loadDynamicScript()">Load
   dynamic script</button>
   </li>
-  <li>On Scripts Panel select "dynamicScript.js" from scripts drop-down and
-  set breakpoint on line 2</li>
+  <li>On <b>Scripts</b> panel select "dynamicScript.js" from scripts
+  drop-down and set breakpoint on line 2</li>
   <li>
   <button id="dynamicScriptFunctionButton" onclick="dynamicScriptFunction()"
     disabled=true>Call function from dynamic script</button>
   </li>
-  <li>You should stop on breakpoint</li>
+  <li>You should stop on the breakpoint</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseInDynamicScript.png></img><br><br>
-  <li>Press play or hit F8 to resume</li>
 </ol>
-<div>Breakpoints can be set in dynamic JavaScript only if it has user
-supplied filename.</div>
+<p>Notice the "<span class="source-code" style="color: #007400">//@
+sourceURL=dynamicScript.js</span>" line at the end of dynamicScript.js file, it gives a
+name to a script created with <span class="source-code">eval</span>.<br />
+Breakpoints can be set in dynamic JavaScript only if it has user supplied
+filename.</p>
 
-<h2>Pause on Next JavaScript Statement</h2>
+<h3><b>Pause on Next JavaScript Statement</b></h3>
 <ol>
-  <li>Click the Pause button</li>
+  <li>Click <b>Pause</b> <img class="ui" src="images/debuggerPause.png" />
+  button</li>
   <li>Move your mouse over this page</li>
-  <li>You should stop on mouseover handler</li>
+  <li>You should stop in <span class="source-code">onMouseOver</span>
+  function</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseOnNextJavaScriptStatement.png></img><br><br>
-  <li>Press play or hit F8 to resume</li>
 </ol>
 
-<h2>Pause on Exceptions</h2>
+<h3><b>Pause on Exceptions</b></h3>
 <ol>
-  <li>Click on "Pause on exceptions" button at the bottom of the window to
-  switch to "Pause on all exceptions" mode</li>
+  <li>Click <b>Pause on exceptions</b> <img class="ui"
+    src="images/pauseOnExceptionsButton.png" /> button at the bottom of the
+  window to switch to <b>Pause on all exceptions</b> mode</li>
   <li>
   <button onclick="raiseAndCatchException()">Raise exception!</button>
   </li>
-  <li>You should stop in raiseAndCatchException function</li>
+  <li>You should stop in <span class="source-code">raiseAndCatchException</span>
+  function</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseOnException.png></img><br><br>
-  <li>Press play or hit F8 to resume</li>
 </ol>
 
-<h2>Pause on Uncaught Exceptions</h2>
+<h3><b>Pause on Uncaught Exceptions</b></h3>
 <ol>
-  <li>Click on "Pause on exceptions" button again to switch to "Pause on
-  uncaught exceptions" mode</li>
+  <li>Click <b>Pause on exceptions</b> <img class="ui"
+    src="images/pauseOnUncaughtExceptionsButton.png" /> button again to switch
+  to <b>Pause on uncaught exceptions</b> mode</li>
   <li>
   <button onclick="raiseAndCatchException()">Raise exception!</button>
   </li>
-  <li>You shouldn't stop in raiseAndCatchException function since exception
-  is caught</li>
+  <li>You should not stop in <span class="source-code">raiseAndCatchException</span>
+  function since exception is caught</li>
   <li>
-  <button onclick="raiseException()">Raise and don't catch!</button>
+  <button onclick="raiseException()">Raise uncaught exception!</button>
   </li>
-  <li>You should stop in raiseException function</li>
+  <li>You should stop in <span class="source-code">raiseException</span>
+  function</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseOnUncaughtException.png></img><br><br>
-  <li>Press play or hit F8 to resume</li>
 </ol>
 
 <h1><a name="dom">Breakpoints on DOM Mutation Events</a></h1>
 <ol>
-  <li>Right click on "Parent Element" below and choose "Inspect Element"
-  from context menu<br>
+  <li>Right click on "Parent Element" below and select <b>Inspect
+  Element</b> from context menu<br>
   <div id="parent" class="test-element" style="width: 140px">Parent
   Element</div>
   </li>
-  <li>Right click on element and choose "Break on Subtree Modifications"</li>
+  <li>Right click on <b>Elements</b>' panel <b>&ltdiv id="parent"
+  ...&gt</b> element and select <b>Break on Subtree Modifications</b></li>
   <li>
   <button onclick="appendChildButtonClicked()">Append child!</button>
   </li>
-  <li>You should stop on "appendChild" function call</li>
+  <li>You should stop on <span class="source-code">appendChild</span>
+  function call</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseInAppendChild.png></img><br><br>
-  <li>Press play or hit F8 to resume</li>
 </ol>
 
 <h1><a name="xhr">Breakpoints on XHR</a></h1>
-<div>
 <ol>
-  <li>Click "+" button on "XHR Breakpoints" pane</li>
-  <li>Type "data.txt" in text input and hit enter</li>
+  <li>Click <b>Add</b> <img class="ui" src="images/addButton.png" />
+  button on <b>XHR Breakpoints</b> sidebar pane on the right side of <b>Scripts</b>
+  panel</li>
+  <li>Type "data.txt" in text input and hit <b>enter</b></li>
   <li>
   <button onclick="retrieveData()">Retrieve data.txt by XHR</button>
   </li>
-  <li>You should stop on "send" function call</li>
+  <li>You should stop on <span class="source-code">send</span> function
+  call</li>
+  <li>Right-click on newly created breakpoint and select <b>Remove
+  Breakpoint</b> context menu item</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseOnXHR.png></img><br><br>
-  <li>Right-click on newly created breakpoint and click on "Remove
-  Breakpoint" context menu item</li>
-  <li>Press play or hit F8 to resume</li>
 </ol>
-<div>XHR breakpoint with empty URL will match any XHR. You can also create
-XHR breakpoint from Network Panel:</div>
-<ol>
-  <li>Go to Network Panel and select XHR resource category</li>
-  <li>Right-click on "data.txt" resource and click "Set XHR Breakpoint" in context menu</li>
-  <li>XHR Breakpoint will be added to XHR Breakpoints pane</li>
-</ol>
+<p>To edit URL filter, double click on XHR breakpoint entry in <b>XHR
+Breakpoints</b> sidebar pane. XHR breakpoint with empty URL filter will match any
+XHR.</p>
 
 <h1><a name="eventListener">Breakpoints on JavaScript Event Listeners</a></h1>
 <ol>
-  <li>Expand "Event Listener Breakpoints" pane on the right side of scripts
-  panel</li>
-  <li>Click on black triangle near "Mouse" entry inside "Event Listener
-  Breakpoints" pane to expand it</li>
-  <li>Set a breakpoint by clicking on the checkbox near "mouseout" event
-  entry</li>
+  <li>Expand <b>Event Listener Breakpoints</b> sidebar pane on the right
+  side of <b>Scripts</b> panel</li>
+  <li>Expand <b>Mouse</b> entry</li>
+  <li>Set a <span class="source-code">mouseout</span> Event Listener
+  breakpoint by clicking on the checkbox near the <b>mouseout</b> entry</li>
   <br><img src=images/setMouseOutEventListenerBreakpoint.png></img><br><br>
   <li>Move your mouse across the box below:</li>
   <div id="hoverme" class="test-element" style="width: 100px">Hover me!</div>
-  <li>You should stop on mouseout event handler</li>
+  <li>You should stop on <span class="source-code">mouseout</span> event
+  handler</li>
+  <li>Click <b>Continue</b> <img class="ui"
+    src="images/debuggerContinue.png" /> button or hit <b>F8</b> in Developer
+  Tools window to resume</li>
   <br><img src=images/pauseOnMouseOut.png></img><br><br>
-  <li>Press play or hit F8 to resume</li>
 </ol>
-<br>
-<div>The list of supported events:
+<h3><b>List of Supported Events</b></h3>
 <ol>
-  <li>Keyboard
-  <ul>
-    <li>keydown</li>
-    <li>keypress</li>
-    <li>keyup</li>
-    <li>textInput</li>
-  </ul>
-  </li>
-  <li>Mouse
-  <ul>
-    <li>click</li>
-    <li>dblclick</li>
-    <li>mousedown</li>
-    <li>mouseup</li>
-    <li>mouseover</li>
-    <li>mousemove</li>
-    <li>mouseout</li>
-    <li>mousewheel</li>
-  </ul>
-  </li>
-  <li>Control
-  <ul>
-    <li>resize</li>
-    <li>scroll</li>
-    <li>zoom</li>
-    <li>focus</li>
-    <li>blur</li>
-    <li>select</li>
-    <li>change</li>
-    <li>submit</li>
-    <li>reset</li>
-  </ul>
-  </li>
-  <li>Clipboard
-  <ul>
-    <li>copy</li>
-    <li>cut</li>
-    <li>paste</li>
-    <li>beforecopy</li>
-    <li>beforecut</li>
-    <li>beforepaste</li>
-  </ul>
-  </li>
-  <li>Load
-  <ul>
-    <li>load</li>
-    <li>unload</li>
-    <li>abort</li>
-    <li>error</li>
-  </ul>
-  </li>
-  <li>DOM Mutation
-  <ul>
-    <li>DOMActivate</li>
-    <li>DOMFocusIn</li>
-    <li>DOMFocusOut</li>
-    <li>DOMAttrModified</li>
-    <li>DOMCharacterDataModified</li>
-    <li>DOMNodeInserted</li>
-    <li>DOMNodeInsertedIntoDocument</li>
-    <li>DOMNodeRemoved</li>
-    <li>DOMNodeRemovedFromDocument</li>
-    <li>DOMSubtreeModified</li>
-    <li>DOMContentLoaded</li>
-  </ul>
-  </li>
-  <li>Device
-  <ul>
-    <li>deviceorientation</li>
-    <li>devicemotion</li>
-  </ul>
-  </li>
+  <li><b>Keyboard:</b> keydown, keypress, keyup, textInput</li>
+  <li><b>Mouse:</b> click, dblclick, mousedown, mouseup, mouseover,
+  mousemove, mouseout, mousewheel</li>
+  <li><b>Control:</b> resize, scroll, zoom, focus, blur, select, change,
+  submit, reset</li>
+  <li><b>Clipboard:</b> copy, cut, paste, beforecopy, beforecut,
+  beforepaste</li>
+  <li><b>Load:</b> load, unload, abort, error</li>
+  <li><b>DOM Mutation:</b> DOMActivate, DOMFocusIn, DOMFocusOut,
+  DOMAttrModified, DOMCharacterDataModified, DOMNodeInserted,
+  DOMNodeInsertedIntoDocument, DOMNodeRemoved, DOMNodeRemovedFromDocument,
+  DOMSubtreeModified, DOMContentLoaded</li>
+  <li><b>Device:</b> deviceorientation, devicemotion</li>
 </ol>
+
+<h1><a name="moreInformation">More Information</a></h1>
+<div>For more information, follow the links below:</div>
+<div>
+<ul>
+  <li><span
+    style="font-family: arial, sans-serif; border-collapse: collapse">If
+  you are using Developer Tools to debug Chrome extensions, you can watch <a
+    href="http://www.youtube.com/watch?v=IP0nMv_NI1s"
+    style="color: rgb(42, 93, 176)" target="_blank">this video</a> or go to <a
+    href="http://code.google.com/chrome/extensions/tut_debugging.html"
+    style="color: rgb(42, 93, 176)" target="_blank">this page</a>.</span></li>
+  <li>To join the Chromium developer discussion groups, see <a href="http://www.chromium.org/developers/discussion-groups">http://www.chromium.org/developers/discussion-groups</a>.</li>
+  <li>To get the Chromium Blog RSS feed, see <a href="http://blog.chromium.org/feeds/posts/default"><img border="0"
+    src="http://www.chromium.org/_/rsrc/1257444060505/devtools/feed-icon16x16.png" /></a>  
+    <a href="http://blog.chromium.org/feeds/posts/default" 
+    style="color: rgb(0, 51, 204); text-decoration: underline" target="_blank">RSS feed</a>.</li>
+  <li>To submit a bug or a feature request on Developer Tools, please use
+  issue tracker at <a href="http://crbug.com" rel="nofollow">http://crbug.com</a>.
+  Please also mention "DevTools" in the bug summary.</li>
+  <li>If you know for sure that the bug or a feature should be implemented
+  as a part of WebKit Web Inspector, please submit it at <a
+    href="http://webkit.org/new-inspector-bug" rel="nofollow">http://webkit.org/new-inspector-bug</a>.</li>
+</ul>
 </div>
+
 </div>
 </body>
 </html>
